# non-linear-signal-operators

./: .gitignore  LICENSE  Makefile  README.md  constraints.sdc  pyproject.toml  synthesis.tcl
librelane/: README.md  config.json  view_openroad.tcl
src/: ado.v  aso.v  ed.v  operators_top.v  tkeo.v
tb/cocotb/: Makefile  test_operators.py
tb/verilog/: Makefile  tb_operators.v  wave.gtkw
test_files/synthetic_noise/: signed_synthetic_signal_scale_1.5.txt  signed_synthetic_signal_scale_1.txt  signed_synthetic_signal_scale_2.5.txt  signed_synthetic_signal_scale_2.txt  signed_synthetic_signal_scale_3.txt  signed_synthetic_signal_scale_4.txt  signed_synthetic_signal_scale_5.txt  signed_synthetic_signal_scale_6.txt  unsigned_synthetic_signal_scale_1.5.txt  unsigned_synthetic_signal_scale_1.txt  unsigned_synthetic_signal_scale_2.5.txt  unsigned_synthetic_signal_scale_2.txt  unsigned_synthetic_signal_scale_3.txt  unsigned_synthetic_signal_scale_4.txt  unsigned_synthetic_signal_scale_5.txt  unsigned_synthetic_signal_scale_6.txt
