[tool.poetry]
name = "fir-filter-adder-tree"
version = "0.1.0"
description = "Optimized FIR filter with adder-tree architecture and RTL verification"
authors = ["GGChe <ggche@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.4.0"
scipy = "^1.16.0"
cocotb = "^2.0.1"
plotly = "^6.5.0"

[tool.poetry.group.dev.dependencies]
# Useful but optional
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
